5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4477/executions/1822_1644.log
== TEST (2019-06-13 11:06:37) 
-- CODE:
# Módulo
from numpy import *
# Entrada
v = array(eval(input("Vetor: ")))
# Acumuladora
r = 0
# Laço "For"
for i in range(size(v)):
	if (v[i] < 5.0) and (v[i] > 10):
		r = r + 1
print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:06:37) 
-- CODE:
# Módulo
from numpy import *
# Entrada
v = array(eval(input("Vetor: ")))
# Acumuladora
r = 0
# Laço "For"
for i in range(size(v)):
	if (v[i] < 5.0) and (v[i] > 10):
		r = r + 1
print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:07:55) 
-- CODE:
# Módulo
from numpy import *
# Entrada
v = array(eval(input("Vetor: ")))
# Acumuladora
r = 0
# Laço "For"
for i in range(size(v)):
	if (v[i] < 5.0) and (v[i] > 10):
		r = r + 1

print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:08:21) 
-- CODE:
# Módulo
from numpy import *
# Entrada
v = array(eval(input("Vetor: ")))
# Acumuladora
r = 0
# Laço "For"
for x in v:
	if (x < 5.0) and (x > 10):
		r = r + 1

print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:10:58) 
-- CODE:
# Módulo
from numpy import *
# Entrada
v = array(eval(input("Vetor: ")))
# Acumuladora
r = 0
# Laço "For"
for x in v:
	if (x <= 4) and (x >= 11):
		r = r + 1

print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:12:41) 
-- CODE:
# Módulo
from numpy import *
# Entrada
v = array(eval(input("Vetor: ")))
# Acumuladora
r = 0
# Laço "For"
for i in range(size(v)):
	if (i < 5) and (i > 10)
		r = r + 1
print(r)

-- ERROR:
File "XXXX", line 9
    if (i < 5) and (i > 10)
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:12:47) 
-- CODE:
# Módulo
from numpy import *
# Entrada
v = array(eval(input("Vetor: ")))
# Acumuladora
r = 0
# Laço "For"
for i in range(size(v)):
	if (i < 5) and (i > 10):
		r = r + 1
print(r)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:13:38) 
-- CODE:
# Módulo
from numpy import *
# Entrada
v = array(eval(input("Vetor: ")))
# Acumuladora
soma = 0
# Laço "For"
for i in size(v):
	if (i < 5) and (i > 10):
		soma = soma + 1
print(r)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:21:05) 
-- CODE:
# Módulo
from numpy import *
# Entrada
v = array(eval(input("Vetor: ")))
# Acumuladora
soma = 0
# Laço "For"
for i in range(size(v)):
	if (i < 5):
		soma = soma + 1
print(soma)
		
# Contador do vetor
#	cont = zeros(3, dtype=int)
# Laço "for" 02

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:21:43) 
-- CODE:
# Módulo
from numpy import *
# Entrada
v = array(eval(input("Vetor: ")))
# Acumuladora
soma = 0
# Laço "For"
for i in range(size(v)):
	if (v < 5):
		soma = soma + 1
print(soma)
		
# Contador do vetor
#	cont = zeros(3, dtype=int)
# Laço "for" 02

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:21:52) 
-- CODE:
# Módulo
from numpy import *
# Entrada
v = array(eval(input("Vetor: ")))
# Acumuladora
soma = 0
# Laço "For"
for i in range(size(v)):
	if (v[i] < 5):
		soma = soma + 1
print(soma)
		
# Contador do vetor
#	cont = zeros(3, dtype=int)
# Laço "for" 02

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:22:03) 
-- CODE:
# Módulo
from numpy import *
# Entrada
v = array(eval(input("Vetor: ")))
# Acumuladora
soma = 0
# Laço "For"
for i in range(size(v)):
	if (v[i] < 5):
		soma = soma + 1
print(soma)
		
# Contador do vetor
#	cont = zeros(3, dtype=int)
# Laço "for" 02

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:29:20) 
-- CODE:
# Módulo
from numpy import *
# Entrada
v = array(eval(input("Vetor: ")))
# Acumuladora
soma = 0
# Laço "For"
for i in range(size(v)):
	if (v[i] < 5):
		soma = soma + 1
# Contador do vetor	
cont = zeros(soma, dtype=int)
# Contadores
a = 0
b = 0
# Laço "for" 02
for i in range(size(v)):
	if (v[i] < 5):
		cont[0] = a + 1
	cont[1] = b + 1
	
print(cont)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:31:03) 
-- CODE:
# Módulo
from numpy import *
# Entrada
v = array(eval(input("Vetor: ")))
# Acumuladora
soma = 0
# Laço "For"
for i in range(size(v)):
	if (v[i] < 5):
		soma = soma + 1
# Contador do vetor	
cont = zeros(soma, dtype=int)
# Contadores
j = 0
# Laço "for" 02
for i in range(size(v)):
	if (v[i] < 5):
		cont[j] = i
		j = j + 1
# Saída
print(cont)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:31:24) 
-- CODE:
# Módulo
from numpy import *
# Entrada
v = array(eval(input("Vetor: ")))
# Acumuladora
soma = 0
# Laço "For"
for i in range(size(v)):
	if (v[i] < 5):
		soma = soma + 1
print(soma)
# Contador do vetor	
cont = zeros(soma, dtype=int)
# Contadores
j = 0
# Laço "for" 02
for i in range(size(v)):
	if (v[i] < 5):
		cont[j] = i
		j = j + 1
# Saída
print(cont)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:31:38) 
-- CODE:
# Módulo
from numpy import *
# Entrada
v = array(eval(input("Vetor: ")))
# Acumuladora
soma = 0
# Laço "For"
for i in range(size(v)):
	if (v[i] < 5):
		soma = soma + 1
print(soma)
# Contador do vetor	
cont = zeros(soma, dtype=int)
# Contadores
j = 0
# Laço "for" 02
for i in range(size(v)):
	if (v[i] < 5):
		cont[j] = i
		j = j + 1
# Saída
print(cont)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 11:31:45) 
-- CODE:
# Módulo
from numpy import *
# Entrada
v = array(eval(input("Vetor: ")))
# Acumuladora
soma = 0
# Laço "For"
for i in range(size(v)):
	if (v[i] < 5):
		soma = soma + 1
print(soma)
# Contador do vetor	
cont = zeros(soma, dtype=int)
# Contadores
j = 0
# Laço "for" 02
for i in range(size(v)):
	if (v[i] < 5):
		cont[j] = i
		j = j + 1
# Saída
print(cont)
	
-- EXECUTION TIME:
0.929185
-- TEST CASE 1:
---- input:
[4.3,5.2,3.6,10,9.8,7.1,5,9.0,4.2,7.0,4.5]
---- correct output:
4
[ 0  2  8 10]
---- user output:
4
[ 0  2  8 10]
-- TEST CASE 2:
---- input:
[7.5,2.4,3.6,4,7.9,4.5,4.2,7.0,4.5]
---- correct output:
6
[1 2 3 5 6 8]
---- user output:
6
[1 2 3 5 6 8]
-- TEST CASE 3:
---- input:
[3.6,2.9,5,7,4.5,7.8,9.0]
---- correct output:
3
[0 1 4]
---- user output:
3
[0 1 4]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
